ci: auto-trigger docs deployment on markdown changes
- Add push trigger for master branch
- Only triggers on *.md, docs/**/*.md, and typedoc.json changes
- Avoids unnecessary rebuilds on code-only changes

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,12 @@ name: Deploy Documentation
 on:
   release:
     types: [published]
+  push:
+    branches: [master]
+    paths:
+      - '*.md'
+      - 'docs/**/*.md'
+      - 'typedoc.json'
   workflow_dispatch:
 
 permissions:
