feat(cli): add nxz command-line tool
Portable xz-like CLI that works on any platform with Node.js:
- Compress/decompress with -z, -d, -l, -k, -f, -c, -o, -v, -q
- Custom output file with -o/--output option
- Preset levels 0-9 and extreme mode (-e)
- Multiple files support (like xz)
- Directory skipping with proper message
- Progress display for large files (>1MB)
- Stdin/stdout piping support
- SIGINT handling with partial file cleanup
- Exit codes matching xz conventions

Includes 25 tests and full README documentation.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "NodeJS wrapper for liblzma",
   "type": "module",
   "main": "./lib/lzma.js",
+  "bin": {
+    "nxz": "./lib/cli/nxz.js"
+  },
   "exports": {
     ".": {
       "import": "./lib/lzma.js",
