fix(ci): correct branch trigger pattern for release PRs
- Change `releases/**` to `release/**` to match actual branch naming
- The release workflow creates `release/v*` branches (singular)
- CI was not triggering because it expected `releases/**` (plural)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ on:
       - "!.editorconfig"
     branches:
       - master
-      - "releases/**"
+      - "release/**"
   pull_request:
     paths:
       - "src/**"
@@ -44,7 +44,7 @@ on:
       - "!docs/**"
     branches:
       - master
-      - "releases/**"
+      - "release/**"
   workflow_dispatch:
     inputs:
       xz_version:
