--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,6 +9,7 @@ on:
       - '*.md'
       - 'docs/**/*.md'
       - 'typedoc.json'
+      - 'llms.txt'
   workflow_dispatch:
 
 permissions:
@@ -41,6 +42,9 @@ jobs:
 
       - name: Build documentation
         run: pnpm typedoc
+
+      - name: Copy llms.txt to docs site
+        run: cp llms.txt docs-site/
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
