feat(wasm): add WebAssembly browser support with full API parity
Add WASM-backed XZ/LZMA2 compression for browsers via Emscripten-compiled
liblzma, with the same high-level API as the native Node.js addon.

WASM implementation:
- Buffer API: xzAsync/unxzAsync with preset 0-6 support
- Streaming API: Web TransformStream via createXz/createUnxz
- Utilities: isXZ, versionString, parseFileIndex, easyEncoderMemusage
- Inline mode: base64-embedded WASM for zero-config bundling
- Sync APIs throw LZMAError in browser (WASM limitation)
- Custom WASM loading via initModule() for CDN/service worker scenarios

Browser entry points:
- Conditional exports: "browser" condition auto-resolves in bundlers
- node-liblzma/wasm: explicit WASM import for any environment
- node-liblzma/inline: zero-config base64-embedded WASM

CLI enhancements:
- nxz --benchmark: compare native vs WASM performance
- Refactored compressFile/decompressFile (cognitive complexity < 15)

Infrastructure:
- WASM build script (Emscripten) with size gate (< 100KB gzipped)
- CI workflow for WASM build validation
- Browser demo with live GitHub Pages deployment
- Cross-decompression tests (native <-> WASM compatibility)
- 455 tests passing across 32 test files

Biome schema migrated from 2.2.3 to 2.3.12.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,6 +10,8 @@ on:
       - 'docs/**/*.md'
       - 'typedoc.json'
       - 'llms.txt'
+      - 'examples/browser/**'
+      - 'src/wasm/**'
   workflow_dispatch:
 
 permissions:
@@ -45,6 +47,15 @@ jobs:
 
       - name: Copy llms.txt to docs site
         run: cp llms.txt docs-site/
+
+      - name: Build TypeScript and WASM artifacts
+        run: pnpm build
+
+      - name: Build browser demo
+        working-directory: examples/browser
+        run: |
+          pnpm install
+          pnpm exec vite build
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
