fix(ci): build WASM artifacts in CI pipeline for full test coverage
- Add build-wasm job to ci.yml that builds WASM once on Ubuntu and
  shares artifacts with all test jobs (smoke, full, threading)
- Fix build-wasm.yml to download XZ sources via Python script instead
  of non-existent git submodules
- All WASM tests now run in CI with real WASM binaries

--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -24,9 +24,17 @@ jobs:
     name: Build & Validate WASM
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+
+      - name: Setup Python
+        uses: actions/setup-python@v6
         with:
-          submodules: true
+          python-version: '3.x'
+
+      - name: Download XZ sources
+        run: python scripts/download_xz_from_github.py deps/xz.tar.gz deps/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Emscripten
         uses: mymindstorm/setup-emsdk@v14
