--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,16 +195,20 @@ jobs:
   build-wasm:
     name: Build WASM
     runs-on: ubuntu-latest
-    needs: download-xz
+    needs: setup
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Download XZ sources
-        uses: actions/download-artifact@v7
+      - name: Setup Python
+        uses: actions/setup-python@v6
         with:
-          name: xz-sources
-          path: .
+          python-version: '3.x'
+
+      - name: Download XZ sources
+        run: python scripts/download_xz_from_github.py deps/xz.tar.gz deps/
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Emscripten
         uses: mymindstorm/setup-emsdk@v14
