fix(ci): skip native build scripts in docs demo install
pnpm install in examples/browser/ triggers the root package's
node-gyp postinstall, which fails without liblzma-dev. The demo
only needs vite installed, not the native addon.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Build browser demo
         working-directory: examples/browser
         run: |
-          pnpm install
+          pnpm install --ignore-scripts
           pnpm exec vite build
 
       - name: Setup Pages
