--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,6 @@
 name: Publish
 
 on:
-  push:
-    tags:
-      - 'v*'
   workflow_call:
     inputs:
       tag:
@@ -102,7 +99,7 @@ jobs:
         run: pnpm build
 
       - name: Publish to npm with provenance
-        if: ${{ (github.event_name == 'push') || (inputs.skip_npm == false) }}
+        if: ${{ inputs.skip_npm != true }}
         run: npm publish --provenance --access public
 
       - name: Summarize
