fix(ci): use token param instead of env for Codecov action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -305,11 +305,10 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage/lcov.info
           flags: unittests
           fail_ci_if_error: false
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   # Smoke tests (fast, essential combinations only)
   smoke-test:
