fix(ci): add RUNTIME_LINK and ENABLE_THREAD_SUPPORT env vars to coverage job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -312,6 +312,8 @@ jobs:
         run: pnpm install --frozen-lockfile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RUNTIME_LINK: static
+          ENABLE_THREAD_SUPPORT: 'no'
 
       - name: Build TypeScript
         run: pnpm run build
