--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -312,6 +312,7 @@ jobs:
         run: pnpm install --frozen-lockfile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USE_GLOBAL: 'false'
           RUNTIME_LINK: static
           ENABLE_THREAD_SUPPORT: 'no'
 
