chore: clean .npmrc and remove packageManager field

--- a/.npmrc
+++ b/.npmrc
@@ -1,22 +1,8 @@
-# pnpm configuration for node-liblzma
-
-# Use pnpm for package management
-package-manager=pnpm
-
-# Hoist dependencies to avoid issues with native modules
-shamefully-hoist=true
-
-# Enable strict peer dependencies
-strict-peer-dependencies=false
-
-# Auto install peers for convenience
-auto-install-peers=true
-
-# Save exact versions for stability
-save-exact=false
-
-# Node linker for better compatibility with native modules
-node-linker=isolated
-
 # Registry configuration
 registry=https://registry.npmjs.org/
+
+# pnpm configuration (npm warns about these but they're required for pnpm)
+shamefully-hoist=true
+strict-peer-dependencies=false
+auto-install-peers=true
+node-linker=isolated
