feat: add tar-xz library and nxz standalone CLI packages
- Add tar-xz package: create/extract/list .tar.xz archives
  - Node.js streaming API (create, extract, list)
  - Browser buffer-based API (createTarXz, extractTarXz, listTarXz)
  - Interactive demo page for GitHub Pages
  - 40 tests (29 format + 11 API including security)
- Add nxz standalone CLI package for npx nxz usage
- Add tar.xz support to nxz CLI (-T/--tar, --strip)
- Add ./cli export to node-liblzma package.json
- Fix tar-create mode detection without explicit -z flag
- Fix absolute path handling in createTarFile
- Add path traversal protection in tar extraction
- Update publish.yml to publish workspace packages
- Update docs: README, BROWSER.md, DOCUMENTATION_INDEX

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,7 @@ on:
       - 'typedoc.json'
       - 'llms.txt'
       - 'examples/browser/**'
+      - 'packages/tar-xz/**'
       - 'src/wasm/**'
   workflow_dispatch:
 
@@ -75,6 +76,10 @@ jobs:
         run: |
           pnpm install --ignore-scripts
           pnpm exec vite build
+
+      - name: Build tar-xz demo
+        working-directory: packages/tar-xz
+        run: pnpm exec vite build --config demo/vite.config.ts
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
