--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -98,15 +98,40 @@ jobs:
       - name: Build TypeScript
         run: pnpm build
 
-      - name: Publish to npm with provenance
+      - name: Publish node-liblzma to npm with provenance
         if: ${{ inputs.skip_npm != true }}
         run: npm publish --provenance --access public
 
+      - name: Publish workspace packages
+        if: ${{ inputs.skip_npm != true }}
+        run: |
+          # Publish workspace packages (pure JS, no prebuilds needed)
+          # pnpm publish resolves workspace:^ to real versions automatically
+          # Order matters: tar-xz before nxz (nxz depends on tar-xz)
+          for pkg in packages/tar-xz packages/nxz; do
+            PKG_NAME=$(node -p "require('./$pkg/package.json').name")
+            PKG_VERSION=$(node -p "require('./$pkg/package.json').version")
+
+            # Check if already published (skip to avoid failure on re-runs)
+            if npm view "${PKG_NAME}@${PKG_VERSION}" version 2>/dev/null; then
+              echo "⏭️ ${PKG_NAME}@${PKG_VERSION} already published, skipping"
+            else
+              echo "📦 Publishing ${PKG_NAME}@${PKG_VERSION}"
+              pnpm --filter "${PKG_NAME}" publish --provenance --access public --no-git-checks
+            fi
+          done
+
       - name: Summarize
         run: |
-          echo "## 🎉 Publish Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Tag**: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Published to npm" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Updated GitHub Release" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 Publish Summary" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          TAG="${{ needs.normalize-tag.outputs.tag }}"
+          echo "**Tag**: ${TAG}" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "### Packages published" >> "$GITHUB_STEP_SUMMARY"
+          echo "- ✅ node-liblzma" >> "$GITHUB_STEP_SUMMARY"
+          for pkg in packages/tar-xz packages/nxz; do
+            PKG_NAME=$(node -p "require('./$pkg/package.json').name")
+            PKG_VERSION=$(node -p "require('./$pkg/package.json').version")
+            echo "- ✅ ${PKG_NAME}@${PKG_VERSION}" >> "$GITHUB_STEP_SUMMARY"
+          done
