fix: rename nxz to nxz-cli (npm name conflict with nx)

--- a/packages/nxz/package.json
+++ b/packages/nxz/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nxz",
+  "name": "nxz-cli",
   "version": "1.0.0",
   "description": "Portable xz-like CLI tool for Node.js — compress, decompress, and handle tar.xz archives",
   "type": "module",
