--- a/.github/workflows/check-xz-updates.yml
+++ b/.github/workflows/check-xz-updates.yml
@@ -132,6 +132,7 @@ jobs:
           echo "Updated xz-version.json to ${{ steps.check.outputs.latest }}"
 
       - name: Create Pull Request
+        id: create-pr
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed == 'true' && (github.event.inputs.create_pr == 'true' || github.event_name == 'schedule')
         uses: peter-evans/create-pull-request@v8
         with:
@@ -167,6 +168,13 @@ jobs:
             enhancement
             dependencies
             automated
+
+      - name: Enable auto-merge
+        if: steps.create-pr.outputs.pull-request-number
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ steps.create-pr.outputs.pull-request-number }}
+        run: gh pr merge "$PR_NUMBER" --auto --squash
 
       - name: Create issue on test failure
         if: steps.check.outputs.new_version == 'true' && steps.test.outputs.test_passed != 'true'
