test(coverage): achieve 100% coverage for tar-xz and fix Codecov setup
- Enable thread support in CI coverage job so threads code is reachable
- Add tar-xz coverage step and upload both lcov files to Codecov
- Fix wasm/bindings.ts v8 ignore placement to cover else branch
- Add comprehensive coverage tests for tar-xz (26 tests):
  parseOctal edge cases, PAX headers, symlinks, hardlinks,
  long filenames, path traversal, truncated archives, extractToMemory
- Exclude browser/, barrel re-exports from tar-xz coverage
- Use v8 ignore start/stop (not next N) for reliable TS coverage
- Fix .gitignore coverage* glob catching coverage.spec.ts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -314,7 +314,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USE_GLOBAL: 'false'
           RUNTIME_LINK: static
-          ENABLE_THREAD_SUPPORT: 'no'
+          ENABLE_THREAD_SUPPORT: 'yes'
 
       - name: Build TypeScript
         run: pnpm run build
@@ -322,11 +322,14 @@ jobs:
       - name: Run tests with coverage
         run: pnpm vitest run --coverage
 
+      - name: Run tar-xz tests with coverage
+        run: pnpm --filter tar-xz exec vitest run --coverage
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage/lcov.info
+          files: coverage/lcov.info,packages/tar-xz/coverage/lcov.info
           flags: unittests
           fail_ci_if_error: false
 
