ci: add packages/** to CI trigger paths
Workspace packages under packages/ (e.g. tar-xz) were not triggering
CI on push/PR. Also fix stale ci-unified.yml self-reference.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - "binding.gyp"
       - "scripts/**"
       - "test/**"
+      - "packages/**"
       # Build configuration
       - "package.json"
       - "pnpm-lock.yaml"
@@ -34,12 +35,13 @@ on:
       - "binding.gyp"
       - "scripts/**"
       - "test/**"
+      - "packages/**"
       - "package.json"
       - "pnpm-lock.yaml"
       - "tsconfig.json"
       - "biome.json"
       - "xz-version.json"
-      - ".github/workflows/ci-unified.yml"
+      - ".github/workflows/ci.yml"
       - "!**/*.md"
       - "!docs/**"
     branches:
