--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 
 coverage/
+coverage-reports/
 coverage*.*lcov
 !coverage.spec.ts
 *.lcov
