chore: upgrade Biome to 2.4.0, enable new lint rules
- Migrate config schema to 2.4.0

- Enable noImportCycles, noUnusedExpressions, noUselessUndefined, noUselessCatchBinding

- Auto-fix 9 violations (unused catch bindings, useless undefined, unused expressions)

- Warnings reduced from 25 to 16

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.3.12/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.4.0/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -46,11 +46,15 @@
       },
       "suspicious": {
         "noExplicitAny": "warn",
-        "noArrayIndexKey": "warn"
+        "noArrayIndexKey": "warn",
+        "noImportCycles": "warn",
+        "noUnusedExpressions": "warn"
       },
       "complexity": {
         "noExcessiveCognitiveComplexity": "warn",
-        "noVoid": "off"
+        "noVoid": "off",
+        "noUselessUndefined": "warn",
+        "noUselessCatchBinding": "warn"
       },
       "performance": {
         "noDelete": "warn"
