fix(security): refresh lockfile to resolve 5 dependabot alerts
Removed pnpm.overrides — fresh lockfile resolution picks up patched transitive deps: minimatch 9.0.9, rollup 4.59.0, basic-ftp 5.2.0

--- a/package.json
+++ b/package.json
@@ -146,12 +146,5 @@
   "simple-git-hooks": {
     "pre-commit": "pnpm exec nano-staged"
   },
-  "packageManager": "pnpm@10.15.0",
-  "pnpm": {
-    "overrides": {
-      "minimatch@<9.0.7": ">=9.0.7",
-      "rollup@<4.59.0": ">=4.59.0",
-      "basic-ftp@<5.2.0": ">=5.2.0"
-    }
-  }
+  "packageManager": "pnpm@10.15.0"
 }
